@@ -21,7 +21,7 @@ install:
   - pip install coveralls
 # command to run tests
 script:
-  - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then nosetests -v; fi
+  - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then nosetests; fi
   - if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then nosetests --with-coverage --cover-package MDAnalysis; fi
 after_success:
   - if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then coveralls; fi
